# virtual-memory

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  error.rs  lib.rs  main.rs  process.rs
src/io/: mod.rs  pt_input.rs  st_input.rs
src/io/data/: frame_offset.rs  mod.rs  page_offset.rs  segment_offset.rs  segment_size.rs
src/vm/: constants.rs  frame.rs  mod.rs  physical_memory.rs  virtual_address.rs  virtual_memory.rs
test-data/: error_init.txt  error_input.txt  error_output.txt  input.txt  output.txt
